[package]
name = "core"
version.workspace = true
authors.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.35"
serde = { version = "1.0.197", features = ["derive"] }
utils = { path = "../utils" }
